test/files/invalid/unsupported_field_attributes.fbs
struct Unsupported {
  v0: uint8 (force_align: 16);
  v1: uint8 (key);
}
